force-app/main/default/objects/Medical_Facility__c/fields/Facility_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>Facility_GeoLocation__c</fullName>
    <label>Facility GeoLocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>