force-app/main/default/objects/Medical_Facility__c/fields/Insurence_Required__c.field-meta.xml
<CustomField>
    <fullName>Insurence_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurence Required</label>
    <type>Checkbox</type>
</CustomField>