force-app/main/default/objects/Medical_Facility__c/fields/Medical_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Name__c</fullName>
    <label>Medical Facility Name</label>
    <type>TextArea</type>
</CustomField>